--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
         <title>My test page</title>
     </head>
     <body>
-        <p>This is my page</p>
+        <h1>「Webコンテンツ作成」の成果</h1>
+
+
+        <h2>本テーマの学習目的</h2>
+        <p></p>
+
+        <h2>プロジェクト課題について</h2>
+        <p></p>
+        <p>プロジェクト課題で作成したページ:<a href="project.html">project.html</a></p>
+
+        <h2>数当てゲーム</h2>
+        <p></p>
+        <p></p>
+
+        <h2>毎回の実験で作成したページ</h2>
+        <h3>第1回 WWW と HTML</h3>
+        <p></p>
+        <p>演習の成果</p>
+        <lu>
+            <li><a href="structure.html">演習1-3:HTML文書の作成</a></li>
+            <li><a href="elements.html">演習1-4:HTMLのさまざまな要素</a></li>
+        </lu>
+        <h3>第2回</h3>
+        <h3>第3回</h3>
+        <h3>第4回</h3>
+        <h3>第5回</h3>
+
     </body>
 </html>
