--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <p></p>
         <p>演習の成果</p>
         <lu>
-            <li><a href="structure.html">演習1-3:HTML文書の作成</a></li>
-            <li><a href="elements.html">演習1-4:HTMLのさまざまな要素</a></li>
+            <li><a href="/practice/structure.html">演習1-3:HTML文書の作成</a></li>
+            <li><a href="/practice/elements.html">演習1-4:HTMLのさまざまな要素</a></li>
         </lu>
         <h3>第2回</h3>
         <h3>第3回</h3>
