index.htmlを編集し、活動記録をするためのページを作成

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <h2>毎回の実験で作成したページ</h2>
         <h3>第1回 WWW と HTML</h3>
-        <p></p>
+        <p>今回は...(100字以上)</p>
         <p>演習の成果</p>
         <lu>
             <li><a href="/practice/structure.html">演習1-3:HTML文書の作成</a></li>
