4/20 課題を実施

--- a/project.html
+++ b/project.html
@@ -2,16 +2,50 @@
 <html>
     <head>
         <title>
-            検索結果
+            番組検索
         </title>
     </head>
     <body>
-        <h1>検索結果</h1>
+        <h1>番組検索</h1>
 
+        <p>Search <input type="form"></p>
 
-        <h2><a/href=""></a></h2><!--検索して出てきたページのタイトル-->
-        <p></p><!--出てきたページの説明文-->
-        <table>
+        <table border="1">
+            <tr>
+                <th>開始時刻</th>
+                <th>番組名</th>
+                <th>ジャンル</th>
+            </tr>
+            <tr>
+                <td>5:00</td>
+                <td>朝のニュース</td>
+                <td>ニュース・報道</td>
+            </tr>
+            
+            <tr>
+                <td>6:00</td>
+                <td>地理講座</td>
+                <td>趣味・教育</td>
+            </tr>
+
+            <tr>
+                <td>6:30</td>
+                <td>英語講座</td>
+                <td>趣味・教育</td>
+            </tr>
+
+            <tr>
+                <td>7:00</td>
+                <td>中学数学講座</td>
+                <td>趣味・教育</td>
+            </tr>
+
+            <tr>
+                <td>7:30</td>
+                <td>高校数学講座</td>
+                <td>趣味・教育</td>
+            </tr>
+
 
         </table>
     </body>
