--- a/project.html
+++ b/project.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>
             番組検索
         </title>
+        <link rel="stylesheet" href="">
     </head>
     <body>
         <h1>番組検索</h1>
