--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
             <li><a href="practice-html/structure.html">演習1-3:HTML文書の作成</a></li>
             <li><a href="practice-html/elements.html">演習1-4:HTMLのさまざまな要素</a></li>
         </lu>
-        <h3>第2回</h3>
+        <h3>第2回 CSSによるWebページの装飾</h3>
+
+        <p>演習の成果</p>
+        <lu>
+            <li><a href="practice-css/browser-intro.html">練習2-3:ウェブブラウザ説明ページの装飾</a></li>
+        </lu>
         <h3>第3回</h3>
         <h3>第4回</h3>
         <h3>第5回</h3>
