--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My test page</title>
+        <link ref="stylesheet" href="style.css">
     </head>
     <body>
         <h1>「Webコンテンツ作成」の成果</h1>
@@ -21,7 +22,7 @@
 
         <h2>毎回の実験で作成したページ</h2>
         <h3>第1回 WWW と HTML</h3>
-        <p>今回はHTMLの基本を学び、ページの構造を記述する練習をした。
+        <p class="note">今回はHTMLの基本を学び、ページの構造を記述する練習をした。
             今回の課題に取り組み、文字列がタグとして認識されると色が変わるという点や、
             タグを修正したときにもう一方のタグも自動で修正されるという点など、VSCodeが使いやすい理由に気づくことができた。
             また、以前は「em要素は文字を斜体にし、strong要素は文字を太字にするという意味がある」と思っていたが、
