CSSを編集、内容を追加

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         <h3>第2回 CSSによるWebページの装飾</h3>
 
         <p class="note">
-            今回の演習を通じて、CSSの編集の際はセレクターを使いこなすことが重要であると感じた。
+            今回の演習を通じて、CSSの編集ではセレクターを使いこなすことが重要であると感じた。
             1つのHTML文書において、class属性は「nつ1組」、idは「2つ1組」で使用できる。
-            idは特定の要素のみを別の装飾をしたいときに使うと良いと思った。  
+            idは特定の要素のみを装飾をしたいときに使うと良いと思った。  
             また、基本は外部スタイルシートの方法で記述するが、
-            検索結果の中には、インラインスタイルという書き方で解説されているものがある。
-            この書き方は、要素を指定して一括で編集する特性を活かせないため、注意して調べるべきである。
+            CSSの書き方を検索すると、インラインスタイルという書き方で解説されているページが出てくることがある。
+            この書き方は、要素を指定して一括で編集できる特性を活かせないため、注意して調べるべきである。
         </p>
 
         <p class="item">演習の成果</p>
