--- a/project.html
+++ b/project.html
@@ -6,6 +6,7 @@
             番組検索
         </title>
         <link rel="stylesheet" href="project.css">
+        <script src="tv-program.js" defer></script>
     </head>
     <body>
         <h1>番組検索</h1>
