課題のリンクを追加、説明文を追加

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <p>プロジェクト課題で作成したページ:<a href="project.html">project.html</a></p>
 
         <h2>数当てゲーム</h2>
-        <p></p>
-        <p></p>
+        <p>この課題では、JavaScriptを活用して動的なWebページを作成する。
+            使用する機能はユーザからの入力、ユーザがボタンを押したときに動作、
+            比較・判定、結果をページに反映、それらを繰り返す機能などである。</p>
+        <p>数当てゲームのページ:<a href="kazuate.html">kazuate.html</a></p>
 
 
         <h2>毎回の実験で作成したページ</h2>
@@ -57,6 +59,15 @@
 
 
         <h3>第3回</h3>
+
+        <p class="note">
+
+        </p>
+
+        <p class="item">演習の成果</p>
+        <ul>
+            <li><a href="practice-js/obj-practice.html">練習3-6:オブジェクトの参照</a></li>
+        </ul>
         
         
         <h3>第4回</h3>
