--- a/practice-dom/dom-intro.html
+++ b/practice-dom/dom-intro.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>DOMを操作するJSプログラム</title>
-  </head>
+  	<head>
+    	<title>DOMを操作するJSプログラム</title>
+		<script src="dom-intro.js" defer></script>
+	</head>
 
   <body>
 	  <h1>DOMを操作するJSプログラム</h1>
