「数当てゲーム」「第4回」に文章を追加

--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
         <h2>数当てゲーム</h2>
         <p class="note">この課題では、JavaScriptを活用して動的なWebページを作成する。
             使用する機能はユーザからの入力、ユーザがボタンを押したときに動作、
-            比較・判定、結果をページに反映、それらを繰り返す機能などである。</p>
+            比較・判定、結果をページに反映、それらを繰り返す機能などである。
+            <br>
+            JavaScriptによって、既にページ上にある「◯回目の予想: △」の数値と
+            判定結果を更新する機能を追加した。
+            更新する際のJavaScript内の流れは
+            「変更したい要素を検索→表示したい文を要素に格納」である。
+            要素自体は既にHTML内にあるため、追加する必要はない。
+        </p>
+
         <p>数当てゲームのページ:<a href="kazuate.html">kazuate.html</a></p>
 
 
@@ -78,7 +86,10 @@
         <h3>第4回</h3>
 
         <p class="note">
-
+            今回は、JavaScriptによるHTML内の要素の追加・書き換え・削除等の操作を学んだ。
+            この操作の基本的な流れは「要素を追加したい位置を検索→追加したい要素を作成
+            →要素の内容を設定→検索した位置に追加」である。特に、位置を検索することを考えると
+            HTMLのidが重要となってくる。
         </p>
         
         <p class="item">演習の成果</p>
