学習事項を記録

--- a/index.html
+++ b/index.html
@@ -112,7 +112,12 @@
         <h3>第5回</h3>
 
         <p class="note">
-            
+            今回ほJavaScriptによるイベント処理について学習した。
+            イベント処理を活用することによって、「ユーザがwebページ上で
+            クリックや検索などの操作をする」ことを実現できる。
+            また、デバッグをするときは、インスペクターでイベントが登録されているかの確認や、
+            イベントの途中にブレークポイントを設定して正しく処理されているかの確認をすると良い。
+
         </p>
 
         <p class="item">演習の成果</p>
