学習事項を記入

--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
         <p class="note">この課題では、JavaScriptを活用して動的なWebページを作成する。
             使用する機能はユーザからの入力、ユーザがボタンを押したときに動作、
             比較・判定、結果をページに反映、それらを繰り返す機能などである。
+            特に、条件分岐によってどのような文を表示するかという点に注意した。
             <br>
             JavaScriptによって、既にページ上にある「◯回目の予想: △」の数値と
             判定結果を更新する機能を追加した。
             更新する際のJavaScript内の流れは
             「変更したい要素を検索→表示したい文を要素に格納」である。
             要素自体は既にHTML内にあるため、追加する必要はない。
+            入力された数字は文字列であり、文字列のままでは比較ができない。
+            そのため、「Number」で変換する必要がある。
         </p>
 
         <p class="item">数当てゲームのページ: <a href="kazuate.html">kazuate.html</a></p>
