検索結果の表示機能を編集

--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>番組検索</h1>
-        <p>チャンネル、ジャンルを選択し、「検索」ボタンをクリックしてください。</p>
+        <p>チャンネルとジャンルを選択し、「検索」ボタンをクリックしてください。</p>
 
         <label for="s_tv_search"></label>
             <select name="s_tv_search" id="s_tv_search">
