表示の仕方を編集

--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>番組検索</h1>
-        <p>チャンネルとジャンルを選択し、「検索」ボタンをクリックしてください。</p>
+        <p id="ex">チャンネルとジャンルを選択し、「検索」ボタンをクリックしてください。</p>
 
         <label for="s_tv_search"></label>
             <select name="s_tv_search" id="s_tv_search">
@@ -57,6 +57,7 @@
 
             </select>
         <button id="print">検索</button>
+        <p id="search_result">以下の表に検索結果が表示されます。</p>
         <p></p>
 
 
