レポートを途中まで。あと200字程度書く

--- a/index.html
+++ b/index.html
@@ -149,7 +149,30 @@
         <div>
             <h2>工夫点、苦心点，強調点，感想</h2>
             <p class="note">
-                
+                この実験における工夫点は主に4点ある。
+                1点目は、背景と文字の色の組み合わせである。
+                利用者にとって、文字が読みづらい色の組み合わせを避けるように注意した。
+                例えば、白色の背景に黄色の文字では、背景と文字が共に明るいため文字が見えづらい。
+                黒色の背景に紫色の文字では、背景と文字が共に暗すぎるため読みづらい。
+                2点目は、ページの説明を分かりやすく書く事である。
+                ユーザがページに訪れた時、そのページで何をすれば良いか、どのように利用すればよいか説明する必要がある。
+                例えば、「数当てゲーム」では、「数字を入力してボタンを押す」と、
+                「番組検索」では、「検索キーを選択してからボタンを押す」と説明書きをした。
+                3点目は、画面の表示を頻繁に変える事である。
+                ユーザの操作に対して、Webページが何か反応を示すようにすることで、ユーザは操作の是非やページの状態などを把握できる。
+                例えば、「番組検索」で検索できない場合、検索キーが選択されていないから動作しないか、通信エラーが発生したから動作しないか、
+                ページ上の表示で分かるようにした。
+                4点目は、コードの書き方である。
+                ユーザには直接関係はないが、コードを見やすくすることで編集がしやすかった。
+                また、複雑な部分には、どのような機能にしたいかコメントで記した。
+                特に、JavaScriptでは、DOM、イベント処理の仕組みを整理し、複雑な動作の手順を理解できた。
+                今後、他の人とコードを共有することも考え、相手にとって分かりやすいコードを書けるようにしたい。
+                Webページ制作において心掛けたことは、利用のしやすさである。読みやすさの面では、背景と文字色の組み合わせの他、
+                同じ項目はまとめ、違う項目同士は間隔を開けるような配置にした。
+                このことが、工夫点にもつながっていると思った。
+                苦心点は、やるべきことが次々と見つかり、終わりが見えないことである。
+                ~。
+                しかし、それらにも取り組むことで、完成度が上がり、Webページが使いやすくなっていく事を実感できた。
             </p>
         </div>
         
