工夫点等を記入

--- a/index.html
+++ b/index.html
@@ -151,28 +151,41 @@
             <p class="note">
                 この実験における工夫点は主に4点ある。
                 1点目は、背景と文字の色の組み合わせである。
-                利用者にとって、文字が読みづらい色の組み合わせを避けるように注意した。
-                例えば、白色の背景に黄色の文字では、背景と文字が共に明るいため文字が見えづらい。
-                黒色の背景に紫色の文字では、背景と文字が共に暗すぎるため読みづらい。
+                色を設定する時に文字が読みづらい色の組み合わせを避けるように注意した。
+                例えば、白色の背景に黄色の文字では、背景と文字が共に明るいため文字が見え難い。
+                黒色の背景に紫色の文字では、背景と文字が共に暗いため読みづらい。
                 2点目は、ページの説明を分かりやすく書く事である。
-                ユーザがページに訪れた時、そのページで何をすれば良いか、どのように利用すればよいか説明する必要がある。
-                例えば、「数当てゲーム」では、「数字を入力してボタンを押す」と、
-                「番組検索」では、「検索キーを選択してからボタンを押す」と説明書きをした。
+                ユーザがページに訪れた時、そのページで何をすれば良いか、
+                どのように利用すればよいか説明する必要がある。
+                例えば、「数当てゲーム」では、「数字を入力してボタンを押す」と、「番組検索」では、「検索キーを選択してからボタンを押す」と説明書きをした。
                 3点目は、画面の表示を頻繁に変える事である。
-                ユーザの操作に対して、Webページが何か反応を示すようにすることで、ユーザは操作の是非やページの状態などを把握できる。
-                例えば、「番組検索」で検索できない場合、検索キーが選択されていないから動作しないか、通信エラーが発生したから動作しないか、
-                ページ上の表示で分かるようにした。
-                4点目は、コードの書き方である。
+                ユーザの操作に対して、Webページが反応を示すようにすることで、
+                ユーザはWebページの状態や、自身の操作が適切かどうかなどを把握できる。
+                例えば、「番組検索」で検索できない場合、検索キーが選択されていないから動作しないのか、
+                通信エラーが発生したから動作しないのかを、ページ上の表示を変化させることで分かるようにした。
+                4点目は、コードを見やすく書くことである。
                 ユーザには直接関係はないが、コードを見やすくすることで編集がしやすかった。
-                また、複雑な部分には、どのような機能にしたいかコメントで記した。
+                また、複雑な部分には、どのような機能にしたいかをコメントで記した。
                 特に、JavaScriptでは、DOM、イベント処理の仕組みを整理し、複雑な動作の手順を理解できた。
+                例えば、複数の要素が入ったdiv要素のような入れ子構造となっている要素をページ上に追加するとき、
+                頭の中だけで手順を考えると混乱してしまう。
+                そのため、あらかじめコードを書く位置にコメントを書き、
+                メモや目印のように活用した。
                 今後、他の人とコードを共有することも考え、相手にとって分かりやすいコードを書けるようにしたい。
-                Webページ制作において心掛けたことは、利用のしやすさである。読みやすさの面では、背景と文字色の組み合わせの他、
+                Webページ制作において心掛けたことは、利用のしやすさである。
+                読みやすさの面では、背景と文字色の組み合わせの他、
                 同じ項目はまとめ、違う項目同士は間隔を開けるような配置にした。
-                このことが、工夫点にもつながっていると思った。
-                苦心点は、やるべきことが次々と見つかり、終わりが見えないことである。
-                ~。
-                しかし、それらにも取り組むことで、完成度が上がり、Webページが使いやすくなっていく事を実感できた。
+                機能面では、Webページをどのように使えばよいか説明する、
+                ユーザの操作に対する反応をわかりやすくする等を心掛けた。
+                もしこれらがなかった場合、ユーザはどのようにWebページを利用すれば良いか、
+                操作方法が正しいかどうかわからず困惑してしまうと考えた。
+                そのため、上記のような工夫をした。
+                一方、その工夫を実現する過程で苦心点があった。
+                それは、制作を進めるたびにやるべきことが次々と見つかり、
+                終わりが見えないことである。
+                例えば、ユーザに伝わる説明ができているか、Webページの動作に抜けがないか、などである。
+                しかし、それらに粘り強く取り組むことで完成度が上がり、
+                Webページが使いやすくなっていく事を実感できた。
             </p>
         </div>
         
