工夫点等を記入

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 そのため、あらかじめコードを書く位置にコメントを書き、
                 メモや目印のように活用した。
                 今後、他の人とコードを共有することも考え、相手にとって分かりやすいコードを書けるようにしたい。
-                Webページ制作において心掛けたことは、利用のしやすさである。
+                <br>Webページ制作において心掛けたことは、利用のしやすさである。
                 読みやすさの面では、背景と文字色の組み合わせの他、
                 同じ項目はまとめ、違う項目同士は間隔を開けるような配置にした。
                 機能面では、Webページをどのように使えばよいか説明する、
@@ -180,7 +180,7 @@
                 もしこれらがなかった場合、ユーザはどのようにWebページを利用すれば良いか、
                 操作方法が正しいかどうかわからず困惑してしまうと考えた。
                 そのため、上記のような工夫をした。
-                一方、その工夫を実現する過程で苦心点があった。
+                <br>一方、その工夫を実現する過程で苦心点があった。
                 それは、制作を進めるたびにやるべきことが次々と見つかり、
                 終わりが見えないことである。
                 例えば、ユーザに伝わる説明ができているか、Webページの動作に抜けがないか、などである。
